# claude-code-stack-zh

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  start.sh  test_smoke.py
rules_and_templates/: git-commit.cursorrules  jira-to-pr-template.md  standard-api.cursorrules
